RESOLVED FIXED136761
WebKit scrollbars flash in non-dominant spaces when entering Mission Control
https://bugs.webkit.org/show_bug.cgi?id=136761
Summary WebKit scrollbars flash in non-dominant spaces when entering Mission Control
Beth Dakin
Reported 2014-09-11 15:07:12 PDT
WebKit scrollbars flash in non-dominant spaces when entering Mission Control, which can create performance problems on slower machines. rdar://problem/18195616
Attachments
Patch (5.52 KB, patch)
2014-09-11 15:13 PDT, Beth Dakin
thorton: review+
Beth Dakin
Comment 1 2014-09-11 15:13:56 PDT
Beth Dakin
Comment 2 2014-09-11 15:19:54 PDT
Note You need to log in before you can comment on or make changes to this bug.